# multi-agent-paper-orchestration

./: .env.example  .gitignore  LICENSE.md  Makefile  README.md  model-providers.toml  pyproject.toml
data/: quote_requests_spicy.csv
docs/: architecture.md  beavers_choice_workflow_minimal.md  evaluation.md  portfolio_refactor_plan.md  provider-extensions.md
docs/.agents/: TASK-EXECUTION-PROMPT.md
docs/done/: 01_bootstrap_repository.md  02_openai_configuration_cleanup.md  03_package_skeleton_and_imports.md  04_data_and_database_layer.md  05_schemas_parsing_and_pricing.md  06_agent_modules.md  07_evaluation_cli.md  08_provider_configuration_contract.md  09_model_factory_and_capability_preflight.md  11_spicy_replay_dataset.md  13_evaluation_model_selection.md
docs/tasks/: 05_schemas_parsing_and_pricing.md  06_agent_modules.md  07_evaluation_cli.md  08_tests_and_ci.md  09_portfolio_documentation.md  10_first_class_model_providers.md  10_polish_and_publish_prep.md  12_provider_extensions_and_conformance.md  14_provider_tests_and_ci.md  15_portfolio_documentation.md  16_polish_and_publish_prep.md
examples/: sample_customer_requests.md  sample_outputs.md  test_results_passing.csv
legacy/: project_starter_passing.py  requirements_passing.txt
scripts/: __init__.py  generate_spicy_dataset.py  run_evaluation.py
src/paper_orchestration/: __init__.py  catalog.py  config.py  database.py  evaluation.py  parsing.py  pricing.py  schemas.py  tools.py
src/paper_orchestration/agents/: __init__.py  base.py  intake.py  inventory.py  (+3 more)
tests/: test_agent_execution.py  test_database.py  test_evaluation.py  test_first_class_providers.py  test_model_configuration.py  test_model_factory.py  test_ollama_integration.py  test_openai_configuration.py  test_package_imports.py  test_parsing.py  test_pricing.py  test_provider_extensions.py  test_repo_scaffold.py  test_spicy_dataset.py
(+5 files in other folders)
